<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_actionbar">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true">


            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.shatskykh.victor.lvivskagvara">

                <LinearLayout
                    android:id="@+id/listview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edit_text"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.7"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:paddingRight="10dp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/search_icon"
                            android:src="@android:drawable/ic_menu_search" />
                    </LinearLayout>

                    <ScrollView
                        android:id="@+id/scroll_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.00">

                        <LinearLayout
                            android:id="@+id/list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" />
                    </ScrollView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/buttonbar_height"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button1"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/button_details" />

                        <Button
                            android:id="@+id/button_delete"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="onDeleteButtonClick"
                            android:text="@string/button_delete" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:colorBackground"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/items_horizontal_margin"
                        android:text="@string/interpretation"
                        android:textAlignment="center"
                        android:textSize="@dimen/header_text_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/items_horizontal_margin"
                        android:text="@string/dointerpretation"
                        android:textAlignment="center" />
                </LinearLayout>
            </FrameLayout>
        </FrameLayout>

        <!-- android:layout_marginTop="?android:attr/actionBarSize"-->
        <fragment
            android:id="@+id/fragment_drawer"
            android:name="com.shatskykh.victor.lvivskagvara.NavigationDrawerFragment"
            android:layout_width="@dimen/navigation_drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:layout="@layout/fragment_navigation_drawer" />
    </android.support.v4.widget.DrawerLayout>
</RelativeLayout>
